[package]
name = "uranium_proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uranium_proxy"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["tracing", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.16.0"
bookmark_grpc_codegen = { git = "https://github.com/opeolluwa/bookmark_grpc_codegen", tag = "v1.0.6", version = "1.0.0" }
hyper = { version = "1.5.0", features = ["full"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["compression-gzip", "cors", "trace", "validate-request"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
cargo-watch = "8.5.3"
